<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NewFun</string>
    <string name="action_settings">Settings</string>
    <string name="prompt">提示</string>
    <string name="check_connection">无可用网络连接，请检查网络设置！</string>
	<string name="menu_settings">设置</string>
	<string name="close">关闭</string>
    <string name="login">login</string>
    <string name="register_me">注册帐号</string>
    <string name="login_me">直接登录</string>
    <string name="com_sina_weibo_sdk_login">用微博登录</string>
    <string name="login_press">第三方一键登录</string>
    <string name="login_forgot">忘记密码</string>
    <string name="login_btn">登 录</string>
    <string name="login_account_hint">手机号</string>
    <string name="login_pwd_hint">密码</string>
    
    <string name="reg_resend_code">重新发送验证码</string>
    <string name="reg_send_code">发送验证码</string>
    <string name="reg_verify_code">验证码</string>
    <string name="have_agreed_text">我已经阅读并同意</string>
    <string name="clause">《MyFun的使用条款》</string>
    <string name="send_verify">发送验证码</string>
    <string name="next">下一步</string>
    <string name="reg_name">昵称</string>
    <string name="reg_info_sex">性别</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="age">年龄</string>
    <string name="unselected">未选择</string>
    <string name="finish">完成</string>
    <string name="cancel">取消</string>
    

</resources>
